fix PR 2